--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,16 @@
 		<module>jfeed</module>
 		<module>mootools</module>
 	</modules>
+	
+	<build>
+		<plugins>
+		  <plugin>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.7</version>
+			<configuration>
+			  <skip>true</skip>
+			</configuration>
+		  </plugin>
+		</plugins>
+  </build>
 </project>
