--- a/cryptoJs/modules/cipher-core/pom.xml
+++ b/cryptoJs/modules/cipher-core/pom.xml
@@ -7,9 +7,9 @@
         <version>3.0.2</version>
     </parent>
 
-    <artifactId>cryptoJS-cypher-core</artifactId>
+    <artifactId>cryptoJS-cipher-core</artifactId>
     <packaging>pom</packaging>
-    <name>cryptoJs-cypher-core</name>
+    <name>cryptoJs-cipher-core</name>
     
     <distributionManagement>
     	<!-- We deploy on the 3rd party repository -->
@@ -44,11 +44,11 @@
 				<configuration>
 					<artifacts>
 						<artifact>
-		                  <file>${project.basedir}/../..//src/main/js/cypher-core.js</file>
+		                  <file>${project.basedir}/../..//src/main/js/cipher-core.js</file>
                 		  <type>js</type>
 		                </artifact>
 		                <artifact>
-		                  <file>${project.basedir}/../../src/main/js/cypher-core-min.js</file>
+		                  <file>${project.basedir}/../../src/main/js/cipher-core-min.js</file>
                 		  <type>js</type>
         		          <classifier>min</classifier>
 		                </artifact>
