Changes after organization renaming
The groupId was updated

Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/cordova/pom.xml
+++ b/cordova/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>cordova</artifactId>
     <version>2.2.0</version>
     <packaging>pom</packaging>
