--- a/cryptoJs/modules/cipher-core/pom.xml
+++ b/cryptoJs/modules/cipher-core/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.nano.libs</groupId>
+        <groupId>org.nanoko.libs</groupId>
         <artifactId>cryptoJS</artifactId>
         <version>3.0.2</version>
     </parent>
