--- a/cryptoJs/pom.xml
+++ b/cryptoJs/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>cryptoJS</artifactId>
     <version>3.0.2</version>
     <packaging>pom</packaging>
