--- a/enyo/pom.xml
+++ b/enyo/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>enyo</artifactId>
     <version>2.1.1</version>
     <packaging>pom</packaging>
