--- a/jfeed/pom.xml
+++ b/jfeed/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>jfeed</artifactId>
     <version>20110925</version>
     <packaging>pom</packaging>
