--- a/jquery.form/pom.xml
+++ b/jquery.form/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>jquery.form</artifactId>
     <version>3.18</version>
     <packaging>pom</packaging>
