--- a/jquery/pom.xml
+++ b/jquery/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>jquery</artifactId>
     <version>1.8.3</version>
     <packaging>pom</packaging>
