--- a/mootools/pom.xml
+++ b/mootools/pom.xml
@@ -7,7 +7,7 @@
         <version>5</version>
     </parent>
 
-    <groupId>org.nano.libs</groupId>
+    <groupId>org.nanoko.libs</groupId>
     <artifactId>mootools-core</artifactId>
     <version>1.4.5</version>
     <packaging>pom</packaging>
