Fixing aggregation order to create shape correctly
Signed-off-by: nicolas-rempulski <nicolas.rempulski@gmail.com>

--- a/jQRoundabout/pom.xml
+++ b/jQRoundabout/pom.xml
@@ -45,6 +45,14 @@
                 <groupId>org.nanoko.coffee-mill</groupId>
                 <artifactId>coffee-mill-maven-plugin</artifactId>
                 <extensions>true</extensions>
+                <configuration>
+                    <javascriptAggregation>
+                        <file>jquery.roundabout.js</file>
+                        <file>jquery.roundabout-shapes.js</file>
+                        <file>jquery.event.drag-2.2.js</file>
+                        <file>jquery.event.drop-2.2.js</file>
+                    </javascriptAggregation>
+                </configuration>
             </plugin>
 		</plugins>
 	  </build>
