--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>mootools</module>
         <module>enyo</module>
         <module>cryptoJs</module>
+        <module>bootstrap</module>
 	</modules>
 	
 	<build>
