--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -53,15 +53,25 @@
 
                                 <artifact>
                                     <file>${project.basedir}/src/main/css/bootstrap.css</file>
-                                    <file>${project.basedir}/src/main/css/bootstrap-responsive.css</file>
                                     <type>css</type>
                                 </artifact>
 
+                                <artifact>
+                                    <file>${project.basedir}/src/main/css/bootstrap-responsive.css</file>
+                                    <type>css</type>
+                                    <classifier>responsive</classifier>
+                                </artifact>
+
+                                <artifact>
+                                    <file>${project.basedir}/src/main/img/glyphicons-halflings.png</file>
+                                    <type>png</type>
+                                    <classifier>glyphicons-halflings</classifier>
+                                </artifact>
 
                                 <artifact>
                                     <file>${project.basedir}/src/main/img/glyphicons-halflings-white.png</file>
-                                    <file>${project.basedir}/src/main/img/glyphicons-halflings.png</file>
                                     <type>png</type>
+                                    <classifier>glyphicons-halflings-white</classifier>
                                 </artifact>
 
                             </artifacts>
