--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.nanoko.jslibs</groupId>
+	<groupId>org.nanoko.libs</groupId>
 	<artifactId>javascript-libraries</artifactId>
 	<packaging>pom</packaging>
 	<name>javascript-libraries</name>
@@ -9,6 +9,7 @@
 
     <modules>
         <module>bootstrap</module>
+        <module>coffeescript</module>
         <module>cordova</module>
         <module>cryptoJs</module>
         <module>enyo</module>
