Added the compass gem in a jar project
Discussion and decision taken on the nanoko mailing list:
https://groups.google.com/forum/?fromgroups=#!topic/nanoko/5cHsurjesDc

Signed-off-by: Clement Escoffier <clement.escoffier@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>bootstrap</module>
         <module>coffeescript</module>
+        <module>compass</module>
         <module>cordova</module>
         <module>cryptoJs</module>
         <module>enyo</module>
