--- a/less/pom.xml
+++ b/less/pom.xml
@@ -29,6 +29,23 @@
     <packaging>pom</packaging>
     <name>less</name>
 
+    <distributionManagement>
+    	<!-- We deploy on the 3rd party repository -->
+        <repository>
+            <id>${repo.thirdparty.id}</id>
+            <name>${repo.thirdparty.name}</name>
+            <url>${repo.thirdparty.url}</url>
+            <uniqueVersion>false</uniqueVersion>
+        </repository>
+
+        <snapshotRepository>
+            <id>${repo.snapshots.id}</id>
+            <name>${repo.snapshots.name}</name>
+            <url>${repo.snapshots.url}</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
+
     <licenses>
         <license>
             <name>Apache License 2.0</name>
