Adding ZSchema and q modules
Signed-off-by: Nicolas Rempulski <nrempulski@ubidreams.com>

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>mootools</module>
         <module>showdown</module>
         <module>ractive</module>
+        <module>ZSchema</module>
+        <module>q</module>
     </modules>
 	
     <build>
